2-k3s/24.deal-finder/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deal-finder
  namespace: deal-finder
  labels:
    app: deal-finder
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deal-finder
  template:
    metadata:
      labels:
        app: deal-finder
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
      containers:
        - name: deal-finder
          image: ghcr.io/spyrospsarras/deal-finder:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 60
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
