2-k3s/24.deal-finder/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deal-finder
  namespace: deal-finder
  labels:
    app: deal-finder
spec:
  selector:
    app: deal-finder
  ports:
    - name: http
      port: 8080
      targetPort: http
